--- a/Annetec.css
+++ b/Annetec.css
@@ -3663,13 +3663,13 @@
 
 .u-section-4 .u-text-7 {
   font-size: 1rem;
-  margin: 12px 0 0;
+  margin: 14px 6px 0 -6px;
 }
 
 .u-section-4 .u-btn-1 {
   font-size: 0.9375rem;
   background-image: none;
-  margin: 17px auto 0;
+  margin: 15px auto 0;
   padding: 8px 33px;
 }
 
@@ -3741,13 +3741,13 @@
 
 .u-section-4 .u-text-13 {
   font-size: 1rem;
-  margin: 12px 0 0;
+  margin: 14px 6px 0 -6px;
 }
 
 .u-section-4 .u-btn-2 {
   font-size: 0.9375rem;
   background-image: none;
-  margin: 17px auto 0;
+  margin: 15px auto 0;
   padding: 8px 33px;
 }
 
@@ -3819,13 +3819,13 @@
 
 .u-section-4 .u-text-19 {
   font-size: 1rem;
-  margin: 12px 0 0;
+  margin: 14px 6px 0 -6px;
 }
 
 .u-section-4 .u-btn-3 {
   font-size: 0.9375rem;
   background-image: none;
-  margin: 17px auto 0;
+  margin: 15px auto 0;
   padding: 8px 33px;
 }
 
@@ -3915,6 +3915,11 @@
     margin-top: 87px;
   }
 
+  .u-section-4 .u-text-7 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   .u-section-4 .u-image-2 {
     height: 246px;
     width: 303px;
@@ -3968,6 +3973,11 @@
     margin-top: 87px;
   }
 
+  .u-section-4 .u-text-13 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   .u-section-4 .u-image-3 {
     height: 246px;
     width: 303px;
@@ -4019,6 +4029,11 @@
 
   .u-section-4 .u-text-18 {
     margin-top: 87px;
+  }
+
+  .u-section-4 .u-text-19 {
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
