--- a/Eletricista-Instalador.css
+++ b/Eletricista-Instalador.css
@@ -102,12 +102,12 @@
   width: 233px;
   height: 106px;
   background-image: none;
-  margin: 161px auto 0;
+  margin: 94px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.5rem;
-  margin: -226px 38px 0;
+  margin: -159px 38px 0;
 }
 
 .u-section-1 .u-group-elements-1 {
@@ -124,19 +124,19 @@
 .u-section-1 .u-text-3 {
   font-style: normal;
   width: 109px;
-  margin: -64px auto 0;
+  margin: -54px auto 0;
 }
 
 .u-section-1 .u-line-1 {
   width: 72px;
   transform-origin: left center 0px;
-  margin: -34px 241px 0 auto;
+  margin: -33px 241px 0 auto;
 }
 
 .u-section-1 .u-text-4 {
   font-size: 1.875rem;
   font-weight: 700;
-  margin: 59px 178px 0 182px;
+  margin: 35px 178px 0 182px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -145,7 +145,7 @@
   border-style: solid;
   text-transform: uppercase;
   background-image: none;
-  margin: 4px auto 0;
+  margin: 17px auto 0;
   padding: 12px 54px 13px 53px;
 }
 
@@ -642,12 +642,12 @@
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 161px;
+    margin-top: 94px;
     margin-left: 144px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -226px;
+    margin-top: -159px;
   }
 
   .u-section-1 .u-line-1 {
@@ -982,6 +982,18 @@
 }
 
 .u-section-3 .u-form-group-4 {
+  margin-left: 0;
+}
+
+.u-section-3 .u-label-4 {
+  text-transform: uppercase;
+}
+
+.u-section-3 .u-input-4 {
+  text-transform: uppercase;
+}
+
+.u-section-3 .u-form-group-5 {
   margin-left: 0;
 }
 
