--- a/Manutenção-Residencial.css
+++ b/Manutenção-Residencial.css
@@ -102,12 +102,12 @@
   width: 233px;
   height: 106px;
   background-image: none;
-  margin: 157px auto 0;
+  margin: 79px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
-  margin: -222px 38px 0;
+  margin: -144px 38px 0;
 }
 
 .u-section-1 .u-group-elements-1 {
@@ -136,7 +136,7 @@
 .u-section-1 .u-text-4 {
   font-size: 1.875rem;
   font-weight: 700;
-  margin: 59px 178px 0 182px;
+  margin: 33px 172px 0 188px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -145,13 +145,13 @@
   border-style: solid;
   text-transform: uppercase;
   background-image: none;
-  margin: 4px auto 0;
+  margin: 15px auto 0;
   padding: 12px 54px 13px 53px;
 }
 
 .u-section-1 .u-line-2 {
   transform-origin: left center 0px;
-  margin: 27px 0 0;
+  margin: 42px 0 0;
 }
 
 .u-section-1 .u-text-5 {
@@ -470,11 +470,11 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1065px;
+    min-height: 450px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 958px;
+    min-height: 100px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -487,133 +487,98 @@
   }
 
   .u-section-1 .u-icon-1 {
-    margin-top: -242px;
-    margin-left: -8px;
+    margin-top: -332px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -88px;
-    margin-right: 290px;
-    margin-left: 12px;
-  }
-
-  .u-section-1 .u-gallery-1 {
-    margin-top: 199px;
+    margin-right: 302px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 958px;
+    min-height: 721px;
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 114px;
-    margin-left: 58px;
+    margin-top: 175px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -179px;
+    margin-top: -240px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 32px;
-    margin-right: 81px;
-    margin-left: 69px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 41px;
-  }
-
-  .u-section-1 .u-line-2 {
-    margin-top: 111px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 14px;
-    margin-right: 129px;
-    margin-left: 118px;
-  }
-
-  .u-section-1 .u-icon-2 {
+  .u-section-1 .u-line-1 {
     margin-top: 13px;
   }
 
+  .u-section-1 .u-text-4 {
+    margin-top: 63px;
+    margin-right: 61px;
+    margin-left: 89px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-right: 193px;
+    margin-left: 0;
+  }
+
   .u-section-1 .u-text-6 {
-    margin-top: -26px;
-    margin-right: 73px;
-    margin-left: 215px;
+    margin-top: 20px;
+    margin-right: 130px;
+    margin-left: 158px;
   }
 
   .u-section-1 .u-text-7 {
-    margin-right: 144px;
-    margin-left: 62px;
-  }
-
-  .u-section-1 .u-icon-3 {
-    margin-top: 40px;
+    margin-right: 201px;
+    margin-left: 5px;
   }
 
   .u-section-1 .u-text-8 {
-    margin-top: -26px;
-    margin-right: 148px;
-    margin-left: 62px;
+    margin-top: 20px;
+    margin-right: 205px;
+    margin-left: 5px;
   }
 
   .u-section-1 .u-text-9 {
-    margin-right: 73px;
-    margin-left: 214px;
-  }
-
-  .u-section-1 .u-icon-4 {
-    margin-top: 38px;
-    margin-left: 18px;
+    margin-right: 130px;
+    margin-left: 157px;
   }
 
   .u-section-1 .u-text-10 {
-    margin-top: -29px;
-    margin-right: 7px;
-    margin-left: 230px;
+    margin-top: 20px;
+    margin-left: 173px;
+    margin-right: 64px;
   }
 
   .u-section-1 .u-text-11 {
-    margin-right: 122px;
-    margin-left: 62px;
-  }
-
-  .u-section-1 .u-icon-5 {
-    margin-top: 47px;
-    margin-left: 22px;
+    margin-right: 179px;
+    margin-left: 5px;
   }
 
   .u-section-1 .u-text-12 {
-    margin-right: 70px;
-    margin-left: 204px;
+    margin-top: 20px;
+    margin-right: 130px;
+    margin-left: 144px;
   }
 
   .u-section-1 .u-text-13 {
-    margin-right: 150px;
-    margin-left: 62px;
-  }
-
-  .u-section-1 .u-line-3 {
-    margin-right: 89px;
+    margin-right: 207px;
+    margin-left: 5px;
   }
 
   .u-section-1 .u-text-14 {
-    margin-right: 56px;
-    margin-left: 184px;
+    margin-top: 20px;
+    margin-right: 113px;
+    margin-left: 127px;
   }
 
   .u-section-1 .u-text-15 {
-    margin-top: 21px;
-    margin-right: -37px;
-    margin-left: 58px;
+    margin-left: 5px;
+    margin-right: 16px;
   }
 
   .u-section-1 .u-icon-6 {
-    margin-top: -42px;
+    margin-top: 20px;
   }
 }
 
@@ -631,12 +596,16 @@
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 157px;
+    margin-top: 79px;
     margin-left: 144px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -222px;
+    margin-top: -144px;
+  }
+
+  .u-section-1 .u-line-1 {
+    margin-top: -33px;
   }
 
   .u-section-1 .u-text-4 {
@@ -672,7 +641,6 @@
   .u-section-1 .u-image-1 {
     width: 340px;
     height: 227px;
-    margin-top: 0;
   }
 
   .u-section-1 .u-icon-1 {
@@ -688,9 +656,9 @@
   .u-section-1 .u-gallery-1 {
     height: 186px;
     width: 325px;
-    margin-top: 179px;
-    margin-left: auto;
+    margin-top: 173px;
     margin-right: auto;
+    margin-left: 4px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -735,13 +703,12 @@
   }
 
   .u-section-1 .u-text-5 {
-    margin-top: 12px;
-    margin-right: 84px;
-    margin-left: 111px;
+    margin-top: 6px;
+    margin-right: 231px;
   }
 
   .u-section-1 .u-icon-2 {
-    margin-top: 12px;
+    margin-top: 18px;
     margin-left: 19px;
   }
 
@@ -789,6 +756,7 @@
   }
 
   .u-section-1 .u-text-12 {
+    margin-top: -24px;
     margin-right: 46px;
     margin-left: 203px;
   }
@@ -803,13 +771,13 @@
   }
 
   .u-section-1 .u-text-14 {
+    margin-top: 10px;
     margin-right: 33px;
     margin-left: 203px;
   }
 
   .u-section-1 .u-text-15 {
     margin-top: 22px;
-    margin-right: 16px;
     margin-left: 51px;
   }
 
@@ -819,8 +787,7 @@
   }
 
   .u-section-1 .u-line-4 {
-    margin-top: -50px;
-    margin-bottom: 49px;
+    margin-top: -76px;
   }
 } .u-section-2 {
   background-image: none;
@@ -894,16 +861,6 @@
   }
 }
 
-@media (max-width: 991px) {
-  .u-section-2 .u-tab-link-1 {
-    border-style: dashed;
-  }
-
-  .u-section-2 .u-tab-link-2 {
-    border-style: dashed;
-  }
-}
-
 @media (max-width: 767px) {
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
@@ -915,7 +872,7 @@
     padding-right: 10px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 697px;
+  min-height: 578px;
 }
 
 .u-section-3 .u-text-1 {
@@ -927,10 +884,6 @@
 .u-section-3 .u-form-1 {
   height: 423px;
   width: 734px;
-  --thumb-color: #876cc4;
-  --thumb-hover-color: #a793d6;
-  --track-color: #c0c0c0;
-  --track-active-color: #876cc4;
   margin: 18px auto 48px;
 }
 
